--- a/BLAZAM/Pages/Error/Oops.razor
+++ b/BLAZAM/Pages/Error/Oops.razor
@@ -20,9 +20,9 @@
     else
     {
         <h4>@Exception.GetType().Name</h4>
-        <p>@Exception.Message</p>
-        <p>@Exception.InnerException?.Message</p>
-        <p>@Exception.HelpLink</p>
+        <p>@Exception?.Message</p>
+        <p>@Exception?.InnerException?.Message</p>
+        <p>@Exception?.HelpLink</p>
     }
 
     <p>@Loc["Please report to"] your system administrator</p>
@@ -35,7 +35,7 @@
     public static string? ErrorMessage { get; set; }
     public static string? DetailsMessage { get; set; }
     public static string? HelpMessage { get; set; }
-    public static Exception Exception { get; set; }
+    public static Exception? Exception { get; set; }
     protected override void OnInitialized()
     {
         base.OnInitialized();
