--- a/BLAZAM/Pages/Error/UnhandledExceptionPage.razor
+++ b/BLAZAM/Pages/Error/UnhandledExceptionPage.razor
@@ -35,7 +35,7 @@
                 <MudPaper        
             Square
                     >
-                        Error Message: @Error.Message
+                        Error Message: @Error?.Message
                     </MudPaper Square>
                     <MudPaper Class="overflow-auto mud-typography-nowrap">
                         Stack Trace: <br>
