--- a/BLAZAM/Pages/Groups/CreateGroup.razor
+++ b/BLAZAM/Pages/Groups/CreateGroup.razor
@@ -78,7 +78,7 @@
 
 
 
-    string newGroupName;
+    string newGroupName="";
     List<DirectoryTemplate> templates;
     IADOrganizationalUnit? parentOU;
     IADGroup? newGroup;
