--- a/BLAZAM/Pages/Home.razor
+++ b/BLAZAM/Pages/Home.razor
@@ -44,7 +44,7 @@
     {
         try
         {
-            MOTD = (MarkupString)Context.AppSettings.FirstOrDefault().MOTD;
+            MOTD = (MarkupString)Context?.AppSettings.FirstOrDefault().MOTD;
         }
         catch
         {
