--- a/BLAZAMGui/UI/Settings/DatabaseStatus.razor
+++ b/BLAZAMGui/UI/Settings/DatabaseStatus.razor
@@ -87,7 +87,7 @@
     });
             exportJob.Steps.Add(exportData);
             exportJob.Steps.Add(packageData);
-            await exportJob.ShowJobDetailsDialog(MessageService);
+            exportJob.ShowJobDetailsDialog(MessageService);
             await InvokeAsync(StateHasChanged);
             await exportJob.RunAsync();
 
