Implement EventCallback validatedsubmit

--- a/BLAZAMGui/UI/Users/NewTemplateUser.razor
+++ b/BLAZAMGui/UI/Users/NewTemplateUser.razor
@@ -311,7 +311,7 @@
 
         </Row>
         <Row>
-            <MudButton Color=Color.Success ButtonType="ButtonType.Submit">Next</MudButton>
+            <MudButton Color=Color.Success Disabled=@(IsValid) OnClick="@(()=>{OnValidSubmit.InvokeAsync();})">Next</MudButton>
 
         </Row>
 
