--- a/BLAZAMGui/UI/Settings/ValidatedForm.razor
+++ b/BLAZAMGui/UI/Settings/ValidatedForm.razor
@@ -11,7 +11,8 @@
         }
         set => _saveDisabled = value;
     }
-
+    [Parameter]
+    public EventCallback OnValidSubmit{ get; set; }
 
     protected virtual async void Save()
     {
