--- a/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
+++ b/BLAZAM/Pages/Recycle Bin/RecycleBin.razor
@@ -6,8 +6,10 @@
 
 <MudDataGrid T="IDirectoryEntryAdapter"
              Virtualize=true
+             RowsPerPage=10
              ColumnResizeMode="ResizeMode.Container"
              Class=""
+             Loading=@LoadingData
              Hideable=true
              @bind-SelectedItems=@selectedEntries
              Square=true
@@ -21,8 +23,11 @@
         <MudText Typo="Typo.h6">Recycle Bin</MudText>
         <MudSpacer />
         <MudButton Color="Color.Primary" Variant="@Variant.Outlined" OnClick="@(()=>{RestoreSelected();})">Restore Selected</MudButton>
-
+ 
     </ToolBarContent>
+    <PagerContent>
+        <MudDataGridPager T="IDirectoryEntryAdapter" />
+    </PagerContent>
     <Columns>
         <SelectColumn T="IDirectoryEntryAdapter" ShowInFooter=false ShowInHeader=true />
         <TemplateColumn Title="Type">
@@ -71,7 +76,7 @@
         var search = new ADSearch() { SearchRoot = Directory.GetDeleteObjectsEntry() };
         search.SearchDeleted = true;
         deletedObjects = await search.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>();
-
+        LoadingData = false;
         await InvokeAsync(StateHasChanged);
     }
 
