Hide read news items by default

--- a/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
+++ b/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
@@ -1,60 +1,70 @@
 ﻿@using ApplicationNews
 @using BLAZAM.Update
 @inherits AppComponentBase
-@if(readItems.Count>0 || unreadItems.Count>0){
-<MudMenu Dense=true ListClass="py-0" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight">
-    <ActivatorContent>
-        @{
-            var icon = Icons.Material.Filled.Notifications;
-            var color = Color.Success;
-        }
-        @if (unreadItems.Count > 0)
-        {
-            icon = Icons.Material.Filled.NotificationImportant;
-            color = Color.Warning;
-        }
+@if (readItems.Count > 0 || unreadItems.Count > 0)
+{
+    <MudMenu Dense=true ListClass="py-0" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight">
+        <ActivatorContent>
+            @{
+                var icon = Icons.Material.Filled.Notifications;
+                var color = Color.Success;
+            }
+            @if (unreadItems.Count > 0)
+            {
+                icon = Icons.Material.Filled.NotificationImportant;
+                color = Color.Warning;
+            }
 
-        <MudTooltip Text=@("Blazam "+AppLocalization[" News"])>
-            <MudFab Size=Size.Small Color=@color Class="mx-2" StartIcon="@icon" />
-        </MudTooltip>
+            <MudTooltip Text=@("Blazam "+AppLocalization[" News"])>
+                <MudFab Size=Size.Small Color=@color Class="mx-2" StartIcon="@icon" />
+            </MudTooltip>
 
-    </ActivatorContent>
+        </ActivatorContent>
 
-    <ChildContent>
+        <ChildContent>
+            <MudSwitch @bind-Value=showRead Class=" pa-2 w-100" Label="@AppLocalization["Show read"]"/>
             @foreach (var item in unreadItems.OrderByDescending(x => x.UpdatedAt))
-        {
-            <MudButton Color=@Color.Warning Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);})">
-                <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
-                    <MudStack Row=true>
-                        <MudIcon Icon="@Icons.Material.Filled.Email" /> @item.Title
+            {
+                <MudButton Color=@Color.Warning Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);})">
+                    <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
+                        <MudStack Row=true>
+                            <MudIcon Icon="@Icons.Material.Filled.Email" /> @item.Title
+                        </MudStack>
+                        @if (item.Link != null)
+                        {
+                            <MudLink Color="Color.Secondary" Target="_blank" Href="@item.Link">@item.Link</MudLink>
+                        }
                     </MudStack>
-                    @if (item.Link != null)
-                    {
-                        <MudLink Color="Color.Secondary" Target="_blank" Href="@item.Link">@item.Link</MudLink>
-                    }
-                </MudStack>
-            </MudButton>
-        }
-        @foreach (var item in readItems.OrderByDescending(x=>x.UpdatedAt))
-        {
-            <MudButton Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);})">
-                <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
-                    <MudStack Row=true>
-                        <MudBadge Overlap=true Color="@Color.Success" Icon="@Icons.Material.Filled.Check">
-                            <MudIcon Icon="@Icons.Material.Filled.Email" />
-                        </MudBadge> @item.Title
-                    </MudStack>
-                    @if (item.Link != null)
-                    {
-                        <MudLink Target="_blank" Href="@item.Link">@item.Link</MudLink>
-                    }
-                </MudStack>
-            </MudButton>
-        }
-    </ChildContent>
-</MudMenu>
+                </MudButton>
+            }
+            @if (showRead)
+            {
+                foreach (var item in readItems.OrderByDescending(x => x.UpdatedAt))
+                {
+                    <MudButton Variant="Variant.Filled" Style="border-radius:0px;" FullWidth=true OnClick="@((args)=>{ShowNews(item);})">
+                        <MudStack Class="mud-width-full pt-1" AlignItems="AlignItems.Start">
+                            <MudStack Row=true>
+                                <MudBadge Overlap=true Color="@Color.Success" Icon="@Icons.Material.Filled.Check">
+                                    <MudIcon Icon="@Icons.Material.Filled.Email" />
+                                </MudBadge> @item.Title
+                            </MudStack>
+                            @if (item.Link != null)
+                            {
+                                <MudLink Target="_blank" Href="@item.Link">@item.Link</MudLink>
+                            }
+                        </MudStack>
+                    </MudButton>
+                }
+            }
+            else
+            {
+                <MudText Class="w-100 align-center pa-2">@AppLocalization["There is nothing new to see here"]</MudText>
+            }
+        </ChildContent>
+    </MudMenu>
 }
 @code {
+    private bool showRead;
     private List<NewsItem> unreadItems = new();
     private List<NewsItem> readItems = new();
     private ApplicationUpdate? latestUpdate;
@@ -78,7 +88,7 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        ApplicationNewsService.OnNewItemsAvailable += RefreshItems;   
+        ApplicationNewsService.OnNewItemsAvailable += RefreshItems;
         RefreshItems();
     }
     private void RefreshItems()
@@ -108,7 +118,7 @@
                     x => x.NewsItemId == appUpdateNewsItem.Id
                 ))
             {
-                    unreadItems.Insert(0, appUpdateNewsItem);
+                unreadItems.Insert(0, appUpdateNewsItem);
             }
         }
     }
@@ -117,7 +127,7 @@
     {
         readItems = ApplicationNewsService.GetReadNewsItems(CurrentUser.State);
 
-        if (appUpdateNewsItem!=null && CurrentUser.State.ReadNewsItems.Any(x => x.NewsItemId == appUpdateNewsItem.Id))
+        if (appUpdateNewsItem != null && CurrentUser.State.ReadNewsItems.Any(x => x.NewsItemId == appUpdateNewsItem.Id))
         {
             readItems.Insert(0, appUpdateNewsItem);
         }
