--- a/BLAZAMGui/UI/OU/MoveToOUModalContent.razor
+++ b/BLAZAMGui/UI/OU/MoveToOUModalContent.razor
@@ -3,24 +3,22 @@
 
 <MudText>Choose OU</MudText>
 
-<OUTreeView @bind-StartingSelectedOU=@StartingOU @bind-SelectedOU=@SelectedOU>
-    @*   <NodeContent>
-    @context.Name
-    </NodeContent>*@
-</OUTreeView>
+@* <OUTreeView @bind-StartingSelectedOU=@StartingOU @bind-SelectedOU=@SelectedOU>
 
+</OUTreeView> *@
 
+<ADTreeView ShowAllEntries=false StartingSelectedOU=@StartingOU @bind-SelectedEntry=@SelectedOU/>
 
 
 @code {
 
 
-#nullable disable warnings
+    #nullable disable warnings
 
     [Parameter]
     public IDirectoryEntryAdapter DirectoryModel { get; set; }
 
-    IADOrganizationalUnit SelectedOU { get; set; }
+    IDirectoryEntryAdapter SelectedOU { get; set; }
     IADOrganizationalUnit StartingOU { get; set; }
 
     protected override void OnInitialized()
@@ -40,11 +38,15 @@
             SnackBarService.Warning(DirectoryModel.CanonicalName + " is already in that OU.");
             return;
         }
-        // if (await MessageService.Confirm("Are you sure you want to move this " + DirectoryModel.ObjectType.ToString().ToLower() + " to " + SelectedOU.CanonicalName, "Confirm move"))
-        // {
+        if (SelectedOU is IADOrganizationalUnit ouToMoveTo)
+        {
 
 
-            DirectoryModel.MoveTo(SelectedOU);
+            // if (await MessageService.Confirm("Are you sure you want to move this " + DirectoryModel.ObjectType.ToString().ToLower() + " to " + SelectedOU.CanonicalName, "Confirm move"))
+            // {
+
+
+            DirectoryModel.MoveTo(ouToMoveTo);
 
             SnackBarService.Warning(DirectoryModel.CanonicalName + " has been moved to " + SelectedOU.CanonicalName + ", but changes need to be saved.");
             await ModelChanged.InvokeAsync();
@@ -52,7 +54,8 @@
             return;
 
 
-        //}
+            //}
+        }
 
     }
     protected override bool IsValid => SelectedOU != null;
