--- a/BLAZAMGui/UI/Settings/SystemSettings.razor
+++ b/BLAZAMGui/UI/Settings/SystemSettings.razor
@@ -31,7 +31,7 @@
 
         <SettingsField Label="@AppLocalization["Encryption Seed String"]">
 
-            <MudTextField Label="@AppLocalization["Encryption Seed String"]" Disabled=true Value="@Encryption.Instance?.KeySeedString" />
+            <MudTextField Label="@AppLocalization["Encryption Seed String"]" Disabled=true Value="@(ApplicationInfo.InDemoMode&&CurrentUser.Username=="Demo"?AppLocalization["Private"]:Encryption.Instance?.KeySeedString)" />
 
         </SettingsField>
 
